添加docker帮助文件、集成spring boot admin监控配置